crates/cli/tests/snapshots/project_open__link_rejects_invalid_mode_change_without_replacing_served_state.snap
---
source: crates/cli/tests/project_open.rs
expression: "(initial_link, invalid_link, linked)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://acme.test -> <tempdir>/acme\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "error: duplicate rendered Project env key `DATABASE_URL` from same-depth mappings `postgres.allocations.analytics.env.DATABASE_URL` and `postgres.allocations.app.env.DATABASE_URL`\n",
    },
    ProjectRecord {
        id: "<project_id>",
        slug: "acme",
        mode: Served,
        path: "<tempdir>/acme",
        original_path: "<tempdir>/acme",
        primary_hostname: Some(
            "acme.test",
        ),
        config_path: "<tempdir>/acme/pv.yml",
        desired_php_track: None,
        php_runtime: ProjectPhpRuntimeRecord {
            track: None,
            requested_extensions: [],
            loaded_extensions: [],
            ignored_extensions: [],
        },
        created_at: "<timestamp>",
        updated_at: "<timestamp>",
    },
)
