crates/cli/tests/snapshots/project_open__link_rejects_update_lock_without_recording_project.snap
---
source: crates/cli/tests/project_open.rs
expression: link
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: PV self-update/daemon mutation coordination is active; the OS lock is held on <tempdir>/home/.pv/run/update.lock\n",
}
