crates/cli/tests/snapshots/project_open__open_additional_hostname_argument_opens_exact_hostname.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link, open, opened_urls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://acme.test -> <tempdir>/acme\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened https://api.acme.test for acme.test\n",
        stderr: "",
    },
    [
        "https://api.acme.test",
    ],
)
