crates/cli/tests/snapshots/project_open__open_primary_hostname_argument_normalizes_and_opens_project.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link, open, opened_urls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://acme.test -> <tempdir>/acme\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened https://acme.test for acme.test\n",
        stderr: "",
    },
    [
        "https://acme.test",
    ],
)
