crates/cli/tests/snapshots/project_open__open_project_picker_sorts_projects_by_primary_hostname.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link_zeta, link_alpha, open, opened_urls, environment.prompts.transcript())"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked zeta.test -> <tempdir>/alpha-project\n",
        stderr: "\u{1b}[33m⚠\u{1b}[0m  \u{1b}[33mwarning:\u{1b}[0m PV is not running. Start it with `pv setup`\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked alpha.test -> <tempdir>/zeta-project\n",
        stderr: "\u{1b}[33m⚠\u{1b}[0m  \u{1b}[33mwarning:\u{1b}[0m PV is not running. Start it with `pv setup`\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened https://zeta.test for zeta.test\n",
        stderr: "",
    },
    [
        "https://zeta.test",
    ],
    [
        "Select a Project -> Selected(1)",
    ],
)
