crates/cli/tests/snapshots/project_open__open_rejects_resource_only_target_and_excludes_it_from_picker.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link_resource_only, explicit_open, current_open, link_served, picker_open,\nopened_urls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked resources (resource-only) -> <tempdir>/resources\n",
        stderr: "\u{1b}[33m⚠\u{1b}[0m  \u{1b}[33mwarning:\u{1b}[0m PV is not running. Start it with `pv setup`\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "\u{1b}[31m✗\u{1b}[0m  \u{1b}[31merror:\u{1b}[0m \u{1b}[1mProject `resources` is resource-only and cannot be opened\u{1b}[0m\n   \u{1b}[2m↳\u{1b}[0m \u{1b}[2mtry\u{1b}[0m\u{1b}[2m  \u{1b}[0m\u{1b}[36mpv list\u{1b}[0m\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "\u{1b}[31m✗\u{1b}[0m  \u{1b}[31merror:\u{1b}[0m \u{1b}[1mno linked Project serves HTTP, so there is nothing to open\u{1b}[0m\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://web.test -> <tempdir>/web\n",
        stderr: "\u{1b}[33m⚠\u{1b}[0m  \u{1b}[33mwarning:\u{1b}[0m PV is not running. Start it with `pv setup`\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened https://web.test for web.test\n",
        stderr: "",
    },
    [
        "https://web.test",
    ],
)
