crates/cli/tests/snapshots/project_open__open_uses_project_picker_when_outside_a_linked_project.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link, open, opened_urls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://acme.test -> <tempdir>/acme\n",
        stderr: "\u{1b}[33m⚠\u{1b}[0m  \u{1b}[33mwarning:\u{1b}[0m PV is not running. Start it with `pv setup`\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Opened https://acme.test for acme.test\n",
        stderr: "",
    },
    [
        "https://acme.test",
    ],
)
