crates/cli/tests/snapshots/project_open__open_without_current_project_fails_when_non_interactive.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link, open, opened_urls)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://acme.test -> <tempdir>/acme\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "",
        stderr: "error: this directory is not inside a linked Project\n  Pass a Project slug or hostname, or run `pv list` to see linked Projects.\n",
    },
    [],
)
