crates/cli/tests/snapshots/project_open__project_intent_is_recorded_while_reconciliation_holds_jobs_lock.snap
---
source: crates/cli/tests/project_open.rs
expression: "(link, unlink)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Linked https://acme.test -> <tempdir>/acme\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Unlinked acme.test -> <tempdir>/acme\n",
        stderr: "warning: PV daemon is not running; reconciliation will run after `pv setup` starts it\n",
    },
)
